Fix border on row hover & checkbox alignment

--- a/browser/app.css
+++ b/browser/app.css
@@ -594,7 +594,7 @@ footer {
 
   .checkbox-container {
     float: left;
-    padding: 15px 15px 0 10px;
+    padding: 13px 15px 0 10px;
   }
 
   .message-container {
@@ -831,7 +831,7 @@ footer {
   }
 
   .panel-group-items .panel:not(.zero-border):hover {
-    border-left: 3px solid #c00;
+    border-left: 2px solid #c00;
   }
 
   .column-divider {
